Swagger documentation setup
