# restful/nodejs/swagger/swagger.json
@@ -1,15 +1,10 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
-    "title": "Bonbon-api @v1",
-    "description": "Endpoints",
+    "title": "NE @V1",
+    "description": "Endpoints for Bubbo",
     "version": "1.0.0"
   },
-  "host": "localhost:5000",
-  "basePath": "/",
-  "schemes": [
-    "http"
-  ],
   "paths": {
     "/auth/create-admin": {
       "post": {
@@ -17,6 +12,16 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateAdminDto"
+              }
+            }
           }
         }
       }
@@ -28,6 +33,16 @@
           "200": {
             "description": "OK"
           }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginDto"
+              }
+            }
+          }
         }
       }
     },
@@ -38,7 +53,9 @@
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -56,7 +73,9 @@
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -65,6 +84,16 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateClientDto"
+              }
+            }
           }
         }
       }
@@ -77,12 +106,16 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           },
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -101,12 +134,16 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           },
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -115,6 +152,16 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateClientDto"
+              }
+            }
           }
         }
       },
@@ -125,12 +172,16 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           },
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -142,167 +193,151 @@
           }
         }
       }
-    },
-    "/invoices/": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+    }
+  },
+  "components": {
+    "schemas": {
+      "CreateAdminDto": {
+        "type": "object",
+        "properties": {
+          "fullNames": {
+            "type": "string",
+            "example": ""
           },
-          "401": {
-            "description": "Unauthorized"
+          "email": {
+            "type": "string",
+            "example": ""
+          },
+          "phone": {
+            "type": "string",
+            "example": ""
+          },
+          "password": {
+            "type": "string",
+            "example": ""
+          },
+          "confirmPassword": {
+            "type": "string",
+            "example": ""
           }
         }
       },
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+      "LoginDto": {
+        "type": "object",
+        "properties": {
+          "identifier": {
+            "type": "string",
+            "example": ""
           },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/invoices/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
+          "password": {
+            "type": "string",
+            "example": ""
           }
         }
       },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
+      "CreateClientDto": {
+        "type": "object",
+        "properties": {
+          "phone": {
+            "type": "string",
+            "example": ""
           },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "companyName": {
+            "type": "string",
+            "example": ""
           },
-          "401": {
-            "description": "Unauthorized"
+          "representative": {
+            "type": "string",
+            "example": ""
+          },
+          "tin": {
+            "type": "string",
+            "example": ""
+          },
+          "account": {
+            "type": "string",
+            "example": ""
+          },
+          "room": {
+            "type": "string",
+            "example": ""
+          },
+          "email": {
+            "type": "string",
+            "example": ""
+          },
+          "caution": {
+            "type": "string",
+            "example": ""
+          },
+          "m2": {
+            "type": "string",
+            "example": ""
+          },
+          "startDate": {
+            "type": "string",
+            "example": ""
+          },
+          "endDate": {
+            "type": "string",
+            "example": ""
+          },
+          "amount": {
+            "type": "string",
+            "example": ""
           }
         }
       },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
+      "UpdateClientDto": {
+        "type": "object",
+        "properties": {
+          "phone": {
+            "type": "string",
+            "example": ""
           },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "companyName": {
+            "type": "string",
+            "example": ""
           },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/invoices/client/{clientId}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "clientId",
-            "in": "path",
-            "required": true,
-            "type": "string"
+          "representative": {
+            "type": "string",
+            "example": ""
           },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "tin": {
+            "type": "string",
+            "example": ""
           },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/invoices/set-as-paid/{id}": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
+          "account": {
+            "type": "string",
+            "example": ""
           },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "room": {
+            "type": "string",
+            "example": ""
           },
-          "401": {
-            "description": "Unauthorized"
+          "email": {
+            "type": "string",
+            "example": ""
+          },
+          "caution": {
+            "type": "string",
+            "example": ""
+          },
+          "m2": {
+            "type": "string",
+            "example": ""
+          },
+          "startDate": {
+            "type": "string",
+            "example": ""
+          },
+          "endDate": {
+            "type": "string",
+            "example": ""
+          },
+          "amount": {
+            "type": "string",
+            "example": ""
           }
         }
       }
